various refactors and improvements. full test coverage added to DataParser